[PAYONE-58] Fix display of credit card form.
The SASS compiler seems to strip calc-expressions if no variables are
used in them. The iframe was too large if the containing element had no
defined height.

--- a/src/Resources/storefront/style/payone-payment.scss
+++ b/src/Resources/storefront/style/payone-payment.scss
@@ -1,6 +1,7 @@
 .payone-payment.credit-card .form-control.iframe {
     padding: 0;
     border: 0;
+    height: calc(5em - #{$form-check-input-gutter});
 }
 
 .payone-payment.credit-card .card-logo-container {
@@ -9,7 +10,7 @@
 
 .payone-payment.credit-card #card-logo {
     display: block;
-    height: calc(1.5em + 1.25rem);
+    height: calc(4em - #{$form-check-input-gutter});
     border: 1px solid transparent;
     margin: 0 auto;
 }
